styles.css
html {
  scroll-behavior: smooth;
  overflow-x: hidden;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  --swiper-theme-color: #FFD028;
}

/* Basic Styles */
body {
  font-family: Urbanist;
  color: #fff;
  background: #111;
  max-width: 100%;
  overflow-x: hidden;
}

header {
  display: flex;
  font-family: 'NATS';
  font-size: 18px;
  justify-content: space-around;
  align-items: center;
  padding: 20px;
  background-color: #FFD028;
}

a {
  color: inherit;
  text-decoration: none;
}

a button {
  cursor: pointer;
}

.logo {
  display: flex;
  align-items: center;
}

header .logo img {
  max-width: 150px;
}

nav ul {
  list-style: none;
  display: inline-flex;
  align-items: flex-start;
  gap: 46px;
}

nav ul li {
  margin-right: 20px;
}

nav ul li a {
  text-decoration: none;
  color: #333;
}

b {
  font-weight: 700;
}

header .icon {
  display: none;
}

.cta-button {
  display: flex;
  align-items: center;
  justify-content: center;
  min-width: 157px;
  min-height: 38px;
  flex-shrink: 0;
  background-color: transparent;
  border-radius: 5px;
  border-width: 1px;
  text-align: center;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

.regular-button {
  background-color: #FFD028;
  border-color: #111111;
  color: #111111;
  width: 100%;
}

.regular-button:hover {
  background-color: #111111;
  color: #FFD028;
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
}

section#sobre {
  position: relative;
  min-height: 430px;

  display: flex;
  flex-direction: row;
  align-items: center;
}

section#sobre p {
  border-left: #FFD028;
  border-left-style: solid;
  border-left-width: 4px;

  padding: 63px 0 63px 36px;
  height: 50%;
  text-align: left;

  color: #FFD028;
  font-size: 30px;
  font-style: italic;
  font-weight: 600;
  line-height: normal;
}

div#empty-div {
  min-width: 55%;
  height: 0;
}

section#diferencial {
  display: flex;
  flex-direction: row;
  font-size: 16px;
  justify-content: space-between;
}

section#diferencial div {
  max-width: 500px;
}

.text-diferencial {
  text-align: justify;
  margin-right: 12px;
}

section#diferencial img {
  border-radius: 40px 40px 0 0;
  width: 100%;
  max-height: 80%;
}

section#qualidades {
  background: linear-gradient(180deg, #FFD951 0%, #FFCC16 72.92%, #FFC700 100%);
  display: grid;
  min-height: 600px;
  align-items: center;
  justify-content: center;
}

section#qualidades div {
  height: 100%;
  width: 1080px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

section#qualidades ul {
  height: 100%;
  width: 100%;
  margin: 40px 0 40px 0;
  line-height: 1;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

section#qualidades li {
  height: 100%;
  color: #000;
  list-style: none;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
}

section#qualidades .numeros li {
  justify-content: center;
}

section#qualidades .selos li {
  justify-content: space-between;
}

.largura-item {
  max-width: 180px;
}

section#qualidades img {
  max-width: 100%;
}

section#assessoria {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
}

section#assessoria h2 {
  font-size: 30px;
  font-style: italic;
  font-weight: 600;
  line-height: normal;
}

section#assessoria button {
  font-family: NATS;
  font-size: 24px;
  min-width: 220px;
  min-height: 55px;
}

section#assessoria ul {
  width: 40%;
}

section#assessoria li {
  display: flex;
  align-items: center;
  margin-bottom: 10px;
  width: 100%;
}

.assessoria-desc-container {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.assessoria-desc-container button {
  margin-top: 20px;
}

.assessoria-img-container {
  width: 69px;
  height: 69px;

  border: 2px solid #FFC700;
  border-radius: 69px;
}

.assessoria-img-container img {
  width: 100%;
  height: 100%;
  border-radius: 100%;
  object-fit: cover;
  filter: grayscale(80%);
}

.nome-plano {
  color: #FFD951;
  font-size: 20px;
  font-weight: 600;
}

.criterio-plano {
  color: #FFF;
  font-size: 10px;
  font-weight: 600;
}

.content-section {
  padding: 26px 16%;
}

.assessoria-desc {
  border-top: #FFD028;
  border-top-style: solid;
  border-top-width: 4px;
  color: #FFD028;
  min-width: 230px;
}

.assess-item-parent {
  --margin-based-on-height: 0.2;
}

.assess-item {
  margin-right: calc(var(--margin-based-on-height) * 70%);
}

section#atendimento {
  background: linear-gradient(0deg, rgba(0, 0, 0, 0.53) 0%, rgba(0, 0, 0, 0.53) 100%), url("assets/sobre_atendimento_img.jpeg"), lightgray 50% / cover no-repeat;
  background-attachment: fixed;
  box-shadow: inset -5px -5px 5px 0px #0000008f;
  min-height: 430px;
  width: 100%;

  padding: 26px 24%;

  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  position: relative;
}

#atendimento h3 span {
  color: #FFD028;
  font-style: italic;
}

.descricao-pessoa {
  font-size: 20px;
  margin: 0 0 25px 57px;
}


.atendimento-titulo-container {
  display: flex;
  flex-direction: column;
  align-items: center;

  margin-bottom: 41px;
}

.pessoa-container {
  width: fit-content;
  margin: 6px 0 16px 122px;
  font-size: 24px;
}

.number-line {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.number-line div {
  height: 0%;
  width: 95%;
  border: 2px solid #FFC700;
}

.number-line h2 {
  font-size: 30px;
  height: 57px;
  width: 57px;
  border-radius: 100%;
  background-color: #FFC700;
  display: flex;
  align-items: center;
  justify-content: center;
}

footer {
  background-color: #111111;
  color: #fff;
  font-family: Urbanist;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 25px 16% 0;
}

.footer-content {
  display: flex;
  flex-direction: column;
  align-items: center;

  width: 100%;
}

.footer-text {
  text-align: center;
  width: 100%;
  margin-bottom: 20px;
  word-wrap: break-word;
}

#footer-box {
  position: relative;
}

#borderBottom {
  border-bottom: 2px solid #fff;
  position: absolute;
  width: 60%;
  top: 100%;
  bottom: 0;
}

/* .circle {
  position: absolute;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: #fff;
} */

footer .logo img {
  margin: 25px 0 58px;
  max-width: 150px;
}

.social-links {
  margin: 10px 0 20px;
}

.social-icon {
  display: inline-block;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  overflow: hidden;
  margin: 0 5px;
}

.social-icon img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.contact-button {
  margin: 20px 0;
  padding: 10px 20px;
  background-color: #FFD028;
  color: #111111;
  border: none;
  border-radius: 5px;
  cursor: pointer;
}

.contact-button:hover {
  background-color: #111;
  color: #FFD028;
}

.swiper {
  width: 100%;
  height: 415px;
}

.swiper p {
  text-align: center;
}

.swiper-pagination-bullet {
  border: solid 2px #FFD028;
}

.hide-desk {
  display: none;
}

.legenda-container {
  margin: 10px 0;
}

#bgVideo {
  position: absolute;
  z-index: -1;
  width: 100%;
  height: 100%;
  opacity: 0.49;
  left: 0;
}

.img-equipe-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
  gap: 20px;

  padding: 20px 0;
}

.image-grid-item {
  width: calc(100% - 20px);
  text-align: center;
  height: auto;
  overflow: hidden;
}

.equipe-img-description {
  padding-top: 10px;
  color: #fff;
}

.image-grid-item img {
  width: 100%;
  height: auto;
  object-fit: fill;
  vertical-align: middle;
}

@font-face {
  font-family: 'Urbanist';
  src: url('assets/fonts/Urbanist-VariableFont_wght.ttf') format('truetype');
}

@font-face {
  font-family: 'NATS';
  src: url('assets/fonts/NATS-Regular.woff') format('truetype');
}

@media only screen and (max-width: 1150px) {
  section#diferencial {
    flex-direction: column;
    align-items: center;
  }

  .text-diferencial {
    margin-right: 0;
    margin-bottom: 5%;
  }

  #bgVideo {
    width: unset;
  }

  section#assessoria {
    flex-direction: column;
  }

  section#assessoria ul {
    width: 100%;
    font-size: 16px;
  }

  section#assessoria li {
    margin-bottom: 20px;
  }

  .assessoria-desc-container {
    width: 100%;
  }

  .assessoria-desc-container button {
    margin: 24px 0;
  }
}

/* Media query for mobile devices */
@media only screen and (max-width: 767px) {
  header {
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    font-size: 24px;
  }

  header button {
    margin-top: 12px;
  }

  .fa {
    color: #000;
  }

  #menu-container {
    display: flex;
    flex-direction: row;
  }

  #navBar {
    display: none;
  }

  header .icon {
    display: block;
  }

  nav ul {
    flex-direction: column;
    align-items: center;
    gap: 0;
    margin: 20px 0;
  }

  nav ul li {
    margin-right: 0;
  }

  .content-section {
    padding: 5% 5%;
  }

  #empty-div {
    display: none;
  }

  section#sobre {
    background: linear-gradient(0deg, rgba(0, 0, 0, 0.49) 0%, rgba(0, 0, 0, 0.49) 100%), url("assets/sobre_atendimento_img2.jpeg"), lightgray 50% / cover no-repeat;
    background-position: 50%;

    flex-direction: column;
    justify-content: center;
  }

  #bgVideo {
    display: none;
  }

  section#sobre p {
    border-left: none;
    text-align: center;
    padding: 0 5%;
  }

  section#diferencial {
    font-size: 20px;

    flex-direction: column;
    align-items: center;
  }

  .text-diferencial {
    text-align: center;
    margin-bottom: 5%;
  }

  section#qualidades ul {
    flex-direction: column;
    align-items: center;
    margin: 0;
  }

  section#qualidades li p {
    margin-top: 12px;
  }

  .largura-item {
    max-width: 200px;
    margin: 24px 0;
  }

  section#assessoria {
    flex-direction: column;
  }

  section#assessoria ul {
    width: 100%;
    font-size: 16px;
  }

  section#assessoria li {
    margin-bottom: 20px;
  }

  .assessoria-desc-container {
    width: 100%;
  }

  .assessoria-desc-container button {
    margin: 24px 0;
  }

  .hide-mobile {
    display: none;
  }

  .hide-desk {
    display: inline;
    padding-right: 12px;
  }

  .number-line div {
    min-width: 70%;
    max-width: 73%;
  }

  .atendimento-titulo-container {
    text-align: center;
  }

  .atendimento-titulo-container h2 {
    margin-bottom: 12px;
  }

  .pessoa-container {
    margin: 12px 0;
  }

  .descricao-pessoa {
    margin: 0 0 25px;
  }

  section#diferencial img {
    height: 60%;
  }

  .escritorios {
    max-width: 100% !important;
  }
}

